--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "mocha  --timeout 100000 test/unit/**.spec.js"
   },
   "author": "Noemi Antezana Ortiz",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "chai": "^4.2.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "node-cron": "^2.0.3"
+    "mocha": "^7.1.2",
+    "node-cron": "^2.0.3",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
